# paragon_back

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  appbuild.sh  appstarter.sh
.github/pre-commit/: .pre-commit-config.yaml
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  formatting-function.yml
src/: CMakeLists.txt  main.cpp
src/api/: Api.cpp  Api.hpp  AppComponent.hpp  CMakeLists.txt  EnvironmentWrapper.hpp  SwaggerComponent.hpp
src/api/controller/: MyController.cpp  MyController.hpp
src/api/dto/: BalanceDTOs.hpp  DTOs.hpp  FriendsDTOs.hpp  LoginDTOs.hpp  ReceiptDTOs.hpp  ReciptDTOs.hpp  RegisterDTOs.hpp
src/core/: CMakeLists.txt  CalculateOperationOnReceipt.cpp  CalculateOperationOnReceipt.hpp  accountManager.cpp  accountManager.hpp  authenticator.cpp  authenticator.hpp  core.cpp  core.hpp  receiptOperations.cpp  receiptOperations.hpp  reciptOperations.cpp  reciptOperations.hpp  structures.hpp  token.cpp  token.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp  databaseImpl.cpp  databaseImpl.hpp
src/example/: Example.cpp  Example.hpp
test/: CMakeLists.txt
test/api/: ApiTest.cpp  CMakeLists.txt
test/core/: CMakeLists.txt  Core_test.cpp  core_test.cpp
test/database/: CMakeLists.txt  databaseTest.cpp
test/example/: CMakeLists.txt  ExampleTest.cpp
